assignment1/src/gen/MPParser.py
# Generated from D:/Nam3/PPL/Ass1/assignment1/src/main/mp/parser\MP.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "':='", "'+'", 
                     "'-'", "'*'", "'/'", "'<>'", "'='", "'<'", "'>'", "'<='", 
                     "'>='", "'['", "']'", "':'", "'('", "')'", "';'", "'..'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", 
                      "DO", "IF", "THEN", "ELSE", "RETURN", "WHILE", "BEGIN", 
                      "END", "FUNCTION", "PROCEDURE", "VAR", "TRUE", "FALSE", 
                      "ARRAY", "OF", "REAL", "BOOLEAN", "INTEGER", "STRING", 
                      "NOT", "AND", "OR", "DIV", "MOD", "WITH", "ASSIGNOP", 
                      "ADDOP", "SUBOP", "MULOP", "DIVOP", "NOT_EQUAL", "EQUAL", 
                      "LT", "GT", "LE", "GE", "LSB", "RSB", "COLON", "LB", 
                      "RB", "SEMI", "DOTDOT", "COMMA", "WS", "COMMENT_1", 
                      "COMMENT_2", "COMMENT_3", "IDENT", "INTLIT", "FLOATLIT", 
                      "BOOLLIT", "STRINGLIT", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_varDec = 2
    RULE_onevarDec = 3
    RULE_functionType = 4
    RULE_arrayType = 5
    RULE_primitiveType = 6
    RULE_funDec = 7
    RULE_paraList = 8
    RULE_paradec = 9
    RULE_proDec = 10
    RULE_statement = 11
    RULE_assignState = 12
    RULE_lsh = 13
    RULE_scalarvar = 14
    RULE_indenxexp = 15
    RULE_ifState = 16
    RULE_whileState = 17
    RULE_forState = 18
    RULE_breakState = 19
    RULE_contiSate = 20
    RULE_returnState = 21
    RULE_withState = 22
    RULE_callState = 23
    RULE_compoundState = 24
    RULE_expressionStatement = 25
    RULE_expression = 26
    RULE_primary = 27
    RULE_literal = 28
    RULE_funCall = 29
    RULE_expressionList = 30

    ruleNames =  [ "program", "declaration", "varDec", "onevarDec", "functionType", 
                   "arrayType", "primitiveType", "funDec", "paraList", "paradec", 
                   "proDec", "statement", "assignState", "lsh", "scalarvar", 
                   "indenxexp", "ifState", "whileState", "forState", "breakState", 
                   "contiSate", "returnState", "withState", "callState", 
                   "compoundState", "expressionStatement", "expression", 
                   "primary", "literal", "funCall", "expressionList" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    FOR=3
    TO=4
    DOWNTO=5
    DO=6
    IF=7
    THEN=8
    ELSE=9
    RETURN=10
    WHILE=11
    BEGIN=12
    END=13
    FUNCTION=14
    PROCEDURE=15
    VAR=16
    TRUE=17
    FALSE=18
    ARRAY=19
    OF=20
    REAL=21
    BOOLEAN=22
    INTEGER=23
    STRING=24
    NOT=25
    AND=26
    OR=27
    DIV=28
    MOD=29
    WITH=30
    ASSIGNOP=31
    ADDOP=32
    SUBOP=33
    MULOP=34
    DIVOP=35
    NOT_EQUAL=36
    EQUAL=37
    LT=38
    GT=39
    LE=40
    GE=41
    LSB=42
    RSB=43
    COLON=44
    LB=45
    RB=46
    SEMI=47
    DOTDOT=48
    COMMA=49
    WS=50
    COMMENT_1=51
    COMMENT_2=52
    COMMENT_3=53
    IDENT=54
    INTLIT=55
    FLOATLIT=56
    BOOLLIT=57
    STRINGLIT=58
    ILLEGAL_ESCAPE=59
    UNCLOSE_STRING=60
    ERROR_CHAR=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 62
                self.declaration()
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 67
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDec(self):
            return self.getTypedRuleContext(MPParser.VarDecContext,0)


        def funDec(self):
            return self.getTypedRuleContext(MPParser.FunDecContext,0)


        def proDec(self):
            return self.getTypedRuleContext(MPParser.ProDecContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MPParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.varDec()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.funDec()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 71
                self.proDec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def onevarDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.OnevarDecContext)
            else:
                return self.getTypedRuleContext(MPParser.OnevarDecContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_varDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDec" ):
                listener.enterVarDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDec" ):
                listener.exitVarDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDec" ):
                return visitor.visitVarDec(self)
            else:
                return visitor.visitChildren(self)




    def varDec(self):

        localctx = MPParser.VarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(MPParser.VAR)
            self.state = 76 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 75
                self.onevarDec()
                self.state = 78 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.IDENT):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OnevarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.IDENT)
            else:
                return self.getToken(MPParser.IDENT, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def functionType(self):
            return self.getTypedRuleContext(MPParser.FunctionTypeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_onevarDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOnevarDec" ):
                listener.enterOnevarDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOnevarDec" ):
                listener.exitOnevarDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOnevarDec" ):
                return visitor.visitOnevarDec(self)
            else:
                return visitor.visitChildren(self)




    def onevarDec(self):

        localctx = MPParser.OnevarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_onevarDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(MPParser.IDENT)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 81
                self.match(MPParser.COMMA)
                self.state = 82
                self.match(MPParser.IDENT)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(MPParser.COLON)
            self.state = 89
            self.functionType()
            self.state = 90
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(MPParser.PrimitiveTypeContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(MPParser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_functionType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionType" ):
                listener.enterFunctionType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionType" ):
                listener.exitFunctionType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionType" ):
                return visitor.visitFunctionType(self)
            else:
                return visitor.visitChildren(self)




    def functionType(self):

        localctx = MPParser.FunctionTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionType)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.primitiveType()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def primitiveType(self):
            return self.getTypedRuleContext(MPParser.PrimitiveTypeContext,0)


        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MPParser.ExpressionContext,i)


        def DOTDOT(self):
            return self.getToken(MPParser.DOTDOT, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def getRuleIndex(self):
            return MPParser.RULE_arrayType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayType" ):
                listener.enterArrayType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayType" ):
                listener.exitArrayType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayType" ):
                return visitor.visitArrayType(self)
            else:
                return visitor.visitChildren(self)




    def arrayType(self):

        localctx = MPParser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arrayType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(MPParser.ARRAY)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.LSB:
                self.state = 97
                self.match(MPParser.LSB)
                self.state = 98
                self.expression(0)
                self.state = 99
                self.match(MPParser.DOTDOT)
                self.state = 100
                self.expression(0)
                self.state = 101
                self.match(MPParser.RSB)


            self.state = 105
            self.match(MPParser.OF)
            self.state = 106
            self.primitiveType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimitiveTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primitiveType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitiveType" ):
                listener.enterPrimitiveType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitiveType" ):
                listener.exitPrimitiveType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveType" ):
                return visitor.visitPrimitiveType(self)
            else:
                return visitor.visitChildren(self)




    def primitiveType(self):

        localctx = MPParser.PrimitiveTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_primitiveType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def IDENT(self):
            return self.getToken(MPParser.IDENT, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def paraList(self):
            return self.getTypedRuleContext(MPParser.ParaListContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def functionType(self):
            return self.getTypedRuleContext(MPParser.FunctionTypeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundState(self):
            return self.getTypedRuleContext(MPParser.CompoundStateContext,0)


        def varDec(self):
            return self.getTypedRuleContext(MPParser.VarDecContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_funDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunDec" ):
                listener.enterFunDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunDec" ):
                listener.exitFunDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunDec" ):
                return visitor.visitFunDec(self)
            else:
                return visitor.visitChildren(self)




    def funDec(self):

        localctx = MPParser.FunDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(MPParser.FUNCTION)
            self.state = 111
            self.match(MPParser.IDENT)
            self.state = 112
            self.match(MPParser.LB)
            self.state = 113
            self.paraList()
            self.state = 114
            self.match(MPParser.RB)
            self.state = 115
            self.match(MPParser.COLON)
            self.state = 116
            self.functionType()
            self.state = 117
            self.match(MPParser.SEMI)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 118
                self.varDec()


            self.state = 121
            self.compoundState()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParaListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paradec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ParadecContext)
            else:
                return self.getTypedRuleContext(MPParser.ParadecContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_paraList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParaList" ):
                listener.enterParaList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParaList" ):
                listener.exitParaList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParaList" ):
                return visitor.visitParaList(self)
            else:
                return visitor.visitChildren(self)




    def paraList(self):

        localctx = MPParser.ParaListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paraList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.IDENT:
                self.state = 123
                self.paradec()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MPParser.SEMI:
                    self.state = 124
                    self.match(MPParser.SEMI)
                    self.state = 125
                    self.paradec()
                    self.state = 130
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParadecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.IDENT)
            else:
                return self.getToken(MPParser.IDENT, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def functionType(self):
            return self.getTypedRuleContext(MPParser.FunctionTypeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_paradec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParadec" ):
                listener.enterParadec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParadec" ):
                listener.exitParadec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParadec" ):
                return visitor.visitParadec(self)
            else:
                return visitor.visitChildren(self)




    def paradec(self):

        localctx = MPParser.ParadecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paradec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(MPParser.IDENT)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 134
                self.match(MPParser.COMMA)
                self.state = 135
                self.match(MPParser.IDENT)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 141
            self.match(MPParser.COLON)
            self.state = 142
            self.functionType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def IDENT(self):
            return self.getToken(MPParser.IDENT, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def paraList(self):
            return self.getTypedRuleContext(MPParser.ParaListContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundState(self):
            return self.getTypedRuleContext(MPParser.CompoundStateContext,0)


        def varDec(self):
            return self.getTypedRuleContext(MPParser.VarDecContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_proDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProDec" ):
                listener.enterProDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProDec" ):
                listener.exitProDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProDec" ):
                return visitor.visitProDec(self)
            else:
                return visitor.visitChildren(self)




    def proDec(self):

        localctx = MPParser.ProDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_proDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(MPParser.PROCEDURE)
            self.state = 145
            self.match(MPParser.IDENT)
            self.state = 146
            self.match(MPParser.LB)
            self.state = 147
            self.paraList()
            self.state = 148
            self.match(MPParser.RB)
            self.state = 149
            self.match(MPParser.SEMI)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 150
                self.varDec()


            self.state = 153
            self.compoundState()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignState(self):
            return self.getTypedRuleContext(MPParser.AssignStateContext,0)


        def ifState(self):
            return self.getTypedRuleContext(MPParser.IfStateContext,0)


        def whileState(self):
            return self.getTypedRuleContext(MPParser.WhileStateContext,0)


        def forState(self):
            return self.getTypedRuleContext(MPParser.ForStateContext,0)


        def breakState(self):
            return self.getTypedRuleContext(MPParser.BreakStateContext,0)


        def contiSate(self):
            return self.getTypedRuleContext(MPParser.ContiSateContext,0)


        def returnState(self):
            return self.getTypedRuleContext(MPParser.ReturnStateContext,0)


        def compoundState(self):
            return self.getTypedRuleContext(MPParser.CompoundStateContext,0)


        def callState(self):
            return self.getTypedRuleContext(MPParser.CallStateContext,0)


        def withState(self):
            return self.getTypedRuleContext(MPParser.WithStateContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

